Update API docs for texture, renderer, and window changes
Revised documentation for AnimationController, Texture, TileMap, renderer, and window APIs to reflect recent changes: updated Texture constructors and parameters, added new renderer functions (set_target, set_default_scale_mode, get_default_scale_mode), renamed renderer's get_res to get_target_resolution, updated window.create parameters, and documented new constants for TextureAccess and TextureScaleMode.

--- a/contents/docs/classes/texture/index.mdx
+++ b/contents/docs/classes/texture/index.mdx
@@ -5,12 +5,27 @@ description: A 2D texture that can be rendered to the screen.
 
 ## Constructor
 <div className="api-card">
-- <ApiSig name="Texture" params={[{ name: "file_path", type: "str" }]} />
-- <ApiSig name="Texture" params={[{ name: "pixel_array", type: "PixelArray" }]} />
+- <ApiSig multiline name="Texture" params={[
+    { name: "file_path", type: "str" },
+    { name: "scale_mode", type: "TextureScaleMode", default: "TextureScaleMode.DEFAULT" },
+    { name: "access", type: "TextureAccess", default: "TextureAccess.STATIC" }
+    ]} />
+- <ApiSig multiline name="Texture" params={[
+    { name: "pixel_array", type: "PixelArray" },
+    { name: "scale_mode", type: "TextureScaleMode", default: "TextureScaleMode.DEFAULT" },
+    { name: "access", type: "TextureAccess", default: "TextureAccess.STATIC" }
+    ]} />
+- <ApiSig multiline name="Texture" params={[
+    { name: "size", type: "Vec2"},
+    { name: "scale_mode", type: "TextureScaleMode", default: "TextureScaleMode.DEFAULT" }
+    ]} />
 
 _**Parameters**_
 - `file_path` : Path to the image file to load.
 - `pixel_array` : The pixel array to convert to a texture.
+- `size` : The width and height of the empty texture to create.
+- `scale_mode` : The scaling mode to use for the texture.
+- `access` : The access mode for the texture.
 </div>
 
 ## Properties
