--- a/contents/docs/classes/tile-map/index.mdx
+++ b/contents/docs/classes/tile-map/index.mdx
@@ -18,7 +18,7 @@ _**Parameters**_
 ### Get Layer
 <div className="api-card">
 
-<ApiSig name="get_layer" params={[{name: 'name', type: 'str'}, {name: 'type', type: 'TileLayer.Type', default: 'TileLayer.TILE'}]} returns="TileLayer" />
+<ApiSig multiline name="get_layer" params={[{name: 'name', type: 'str'}, {name: 'type', type: 'TileLayer.Type', default: 'TileLayer.TILE'}]} returns="TileLayer" />
 
 Get a layer object from the tile map by name and type.
 
