--- a/contents/docs/classes/animation-controller/index.mdx
+++ b/contents/docs/classes/animation-controller/index.mdx
@@ -16,7 +16,6 @@ Load animations with `load_sprite_sheet` before using.
 | --- | --- | --- |
 | `current_animation_name` | The current animation's name | `str` |
 | `clip` | The source rectangle (clip) for the current animation frame | `Rect` |
-| `texture` | The sprite sheet texture used by this animation controller | `Texture` |
 | `playback_speed` | The playback speed multiplier | `float` |
 | `frame_index` | The current frame index of the animation | `int` |
 | `progress` | The progress through the current animation as a value between 0.0 and 1.0 | `float` |
@@ -28,13 +27,12 @@ Load animations with `load_sprite_sheet` before using.
 ### Load Sprite Sheet
 <div className="api-card">
 
-<ApiSig name="load_sprite_sheet" multiline params={[{ name: "file_path", type: "str" }, { name: "frame_size", type: "Vec2" }, { name: "strips", type: "list[SheetStrip]" }]} returns="None" />
+<ApiSig name="load_sprite_sheet" multiline params={[{ name: "frame_size", type: "Vec2" }, { name: "strips", type: "list[SheetStrip]" }]} returns="None" />
 
-Load animation frames from a sprite sheet.
+Load animation frames for a sprite sheet.
 Strips are read horizontally from left to right, top to bottom, as provided in the strips list.
 
 _**Parameters**_
-- `file_path` : The path to the sprite sheet image file.
 - `frame_size` : The size of each frame in the sprite sheet.
 - `strips` : A list of sheet strips to load from the sprite sheet.
 
