--- a/contents/docs/manual/constants/index.mdx
+++ b/contents/docs/manual/constants/index.mdx
@@ -32,12 +32,26 @@ description: A comprehensive list of constants used in the Kraken Engine.
 | CENTER | Align |
 | RIGHT | Align |
 
-## Scroll Modes
+## Pixel Array Scroll Modes
 | Name | Type |
 | --- | --- |
 | SMEAR | ScrollMode |
 | REPEAT | ScrollMode |
 | ERASE | ScrollMode |
+
+## Texture Accesses
+| Name | Type |
+| --- | --- |
+| STATIC | TextureAccess |
+| TARGET | TextureAccess |
+
+## Texture Scale Modes
+| Name | Type |
+| --- | --- |
+| LINEAR | TextureScaleMode |
+| NEAREST | TextureScaleMode |
+| PIXEL_ART | TextureScaleMode |
+| DEFAULT | TextureScaleMode |
 
 ## Font Hints
 | Name | Type |
