Fixed Texture.flip annotation

--- a/contents/docs/classes/texture/index.mdx
+++ b/contents/docs/classes/texture/index.mdx
@@ -33,7 +33,7 @@ _**Parameters**_
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `flip` | Whether the texture is flipped horizontally and/or vertically | `Flip` |
+| `flip` | Whether the texture is flipped horizontally and/or vertically | `Texture.Flip` |
 | `size` | The original width and height of the texture | `Vec2` |
 | `alpha` | The alpha modulation of the texture (0.0 to 1.0) | `float` |
 | `tint` | The color tint applied to the texture during rendering | `Color` |
