Finished introduction page for docs

--- a/contents/docs/index.mdx
+++ b/contents/docs/index.mdx
@@ -1,6 +1,15 @@
 ---
-title: Introduction
-description: An introduction to the PyKraken Documentation.
+title: The PyKraken Documentation
 ---
 
-Hi Hello
+## Introduction
+
+Welcome to the PyKraken documentation!
+
+PyKraken is a game engine made for python, providing a clean and intuitive API
+for building games, simulations, and engine-driven applications in Python. It
+focuses on simplicity, performance, and flexibility, making it easy to get
+started while remaining powerful enough for complex projects.
+
+These docs cover everything you need to work with PyKraken, from installation
+and guides to core concepts, APIs, and best practices.
